examples/pass/complex/borrow_lazy.dew
// expect: 84
// Borrow inside a lazily-evaluated thunk.
struct Data { value: Int }
def data = Data { value: 42 };
def show = fn(&d: Data) -> Int { d.value * 2 }
def main = fn { show(data) -> stdout; };
